--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "scad-js",
-  "version": "0.6.0",
-  "description": "Generate OpenSCAD solid models with javascript",
-  "type": "module",
-  "main": "./src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/20lives/scad-js.git"
-  },
-  "author": "20lives",
-  "license": "MIT",
-  "private": false,
-  "bugs": {
-    "url": "https://github.com/20lives/scad-js/issues"
-  },
-  "homepage": "https://github.com/20lives/scad-js#readme",
-  "scripts": {
-    "test": "jest",
-    "lint": "eslint src/."
-  },
-  "devDependencies": {
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  }
+	"name": "scad-js",
+	"version": "0.6.0",
+	"description": "Generate OpenSCAD solid models with javascript",
+	"type": "module",
+	"main": "./src/index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/20lives/scad-js.git"
+	},
+	"author": "20lives",
+	"license": "MIT",
+	"private": false,
+	"bugs": {
+		"url": "https://github.com/20lives/scad-js/issues"
+	},
+	"homepage": "https://github.com/20lives/scad-js#readme",
+	"scripts": {
+		"lint": "eslint src/.",
+		"dev": "openscad dist/output.scad & nodemon --watch 'src/**' --ext 'ts' --exec 'yarn tsc && node --experimental-specifier-resolution=node dist/index.js'",
+		"render": "yarn tsc && node --experimental-specifier-resolution=node dist/index.js && openscad out/output.scad -o out/output.stl"
+	},
+	"devDependencies": {
+		"@types/node": "^18.11.9",
+		"@typescript-eslint/eslint-plugin": "^5.43.0",
+		"@typescript-eslint/parser": "^5.43.0",
+		"eslint": "^8.31.0",
+		"jest": "^29.3.1",
+		"nodemon": "^2.0.20",
+		"prettier": "^2.8.3",
+		"stylelint": "^14.16.1",
+		"stylelint-config-standard": "^29.0.0",
+		"ts-jest": "^29.0.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.4"
+	}
 }
